# open-cure-discovery

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/diseases/: lung-cancer.yaml
docs/: ARCHITECTURE.md  EXAMPLE_VALIDATION.md  ROADMAP.md  TASKS.md
examples/: demo_screening.py  full_pipeline_validation.py  multi_target_validation.py  real_docking_validation.py  real_world_validation.py  validate_installation.py
src/: __init__.py
src/core/: __init__.py  config.py  models.py  pipeline.py
src/core/admet/: __init__.py  calculator.py  filters.py
src/core/docking/: __init__.py  engine.py  preparation.py  receptor.py
src/core/ml/: __init__.py  binding.py  deepchem_binding.py  fingerprints.py
src/core/scoring/: __init__.py  scorer.py
src/data/: __init__.py
src/data/loaders/: __init__.py  chembl.py  pdb.py  zinc.py
src/data/processors/: __init__.py
src/data/validators/: __init__.py
src/ui/: __init__.py
src/ui/cli/: __init__.py  main.py
src/ui/web/: __init__.py
src/utils/: __init__.py
src/utils/gpu/: __init__.py  detector.py
src/utils/io/: __init__.py
tests/: __init__.py  test_config.py  test_integration.py
tests/core/: __init__.py  test_models.py  test_scoring.py
tests/data/: __init__.py
tests/ui/: __init__.py
